@@ -1,3 +1,10 @@
+2002-07-09  David O'Brien  <obrien@FreeBSD.org>
+
+	Merge from mainline:
+	* gdbserver/gdbreplay.c: Include needed system headers.
+	(remote_open): Conditional strchr prototype.
+	(perror_with_name, remote_close, remote_open, expect, play): Static.
+
 2002-07-09  Michal Ludvig  <mludvig@suse.cz>
 
 	* NEWS: Note about dwarf2cfi improvements.
